--- a/app/views/kpm/nodes_info/_nodes_table.html.erb
+++ b/app/views/kpm/nodes_info/_nodes_table.html.erb
@@ -2,10 +2,10 @@
   <thead>
   <tr>
     <th>Node name</th>
-    <th>Startup time</th>
+    <th>Boot time</th>
     <th>Updated date</th>
-    <th>KB version</th>
-    <th>Dependencies version</th>
+    <th>Kill Bill version</th>
+    <th>Dependencies</th>
     <th>Plugins</th>
   </tr>
   </thead>
@@ -13,8 +13,16 @@
   <% nodes_info.each do |node_info| %>
       <tr>
         <td><%= node_info.node_name %></td>
-        <td><%= node_info.boot_time %></td>
-        <td><%= node_info.last_updated_date %></td>
+        <td>
+          <% unless node_info.boot_time.blank? %>
+              <%= time_ago_in_words(DateTime.parse(node_info.boot_time)) %> ago
+          <% end %>
+        </td>
+        <td>
+          <% unless node_info.last_updated_date.blank? %>
+              <%= time_ago_in_words(DateTime.parse(node_info.last_updated_date)) %> ago
+          <% end %>
+        </td>
         <td><%= node_info.kb_version %></td>
         <td>
           <ul>
@@ -29,14 +37,16 @@
               <ul>
                 <% node_info.plugins_info.each do |plugin_info| %>
                     <li>
-                      <%= plugin_info.plugin_name %> v<%= plugin_info.version %> (<%= plugin_info.state %>)
+                      <%= plugin_info.plugin_name %> <%= plugin_info.version %> <span class="label label-<%= plugin_info.state == 'RUNNING' ? 'success' : (plugin_info.state == 'INSTALLED' ? 'warning' : 'danger') %>"><%= plugin_info.state %></span>
                       <% if plugin_info.state == 'RUNNING' %>
                           <%= link_to '<i class="fa fa-pause"></i>'.html_safe, plugin_stop_path(:plugin_name => plugin_info.plugin_name, :plugin_version => plugin_info.version), :method => :post, :title => 'Stop', :remote => true, :class => 'plugin-link' %>
                           <%= link_to '<i class="fa fa-refresh"></i>'.html_safe, plugin_restart_path(:plugin_name => plugin_info.plugin_name, :plugin_version => plugin_info.version), :method => :post, :title => 'Restart', :remote => true, :class => 'plugin-link' %>
                       <% elsif plugin_info.state == 'INSTALLED' || plugin_info.state == 'STOPPED' %>
                           <%= link_to '<i class="fa fa-play"></i>'.html_safe, plugin_start_path(:plugin_name => plugin_info.plugin_name, :plugin_version => plugin_info.version), :method => :post, :title => 'Start', :remote => true, :class => 'plugin-link' %>
                       <% end %>
-                      <%= link_to '<i class="fa fa-eject"></i>'.html_safe, plugin_uninstall_path(:plugin_name => plugin_info.plugin_name, :plugin_version => plugin_info.version), :method => :post, :title => 'Uninstall', :remote => true, :class => 'plugin-link' %>
+                      <% unless plugin_info.version.nil? %>
+                          <%= link_to '<i class="fa fa-eject"></i>'.html_safe, plugin_uninstall_path(:plugin_name => plugin_info.plugin_name, :plugin_version => plugin_info.version), :method => :post, :title => 'Uninstall', :remote => true, :class => 'plugin-link' %>
+                      <% end %>
                     </li>
                 <% end %>
               </ul>
@@ -52,14 +62,7 @@
     $('#nodes-table').dataTable({
       "dom": "t",
       "paging": false,
-      "columns": [
-        null,
-        null,
-        null,
-        null,
-        { "orderable": false },
-        { "orderable": false }
-      ]
+      "ordering": false
     });
 
     var timer = setTimeout(refreshNodesInfo, 1500);
@@ -79,7 +82,7 @@
 
     $('.plugin-link').one('ajax:complete', function() {
       // Delay a bit, to give time for the plugin state to change before the next refresh
-      setTimeout(refreshNodesInfo, 4000);
+      setTimeout(refreshNodesInfo, 6000);
     });
   });
 
