logs: disable refreshes when user clicks through logs
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/app/views/kpm/nodes_info/_logs_table.html.erb
+++ b/app/views/kpm/nodes_info/_logs_table.html.erb
@@ -26,8 +26,9 @@
 <%= javascript_tag do %>
   $(document).ready(function() {
     $('#logs-table').dataTable({
-      "dom": "t",
-      "paging": false,
+      "dom": "<'row'r>t<'row'<'col-md-6'i><'col-md-6'p>>",
+      "pagingType": "full_numbers",
+      "pageLength": 50,
       "ordering": false
     });
   });
