--- a/app/views/kpm/nodes_info/index.html.erb
+++ b/app/views/kpm/nodes_info/index.html.erb
@@ -8,6 +8,16 @@
       <%= render :partial => 'kpm/nodes_info/nodes_table', :locals => {:nodes_info => @nodes_info} %>
     </div>
 
+  </div>
+
+  <div class="column-block">
+
+    <h1><%= link_to 'Install new plugin', plugins_path %></h1>
+
+  </div>
+
+  <div class="column-block">
+
     <h1>Logs</h1>
 
     <div id="logs-table-wrapper">
