kpm: fix installation by plugin key
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/app/views/kpm/plugins/_plugins_table.html.erb
+++ b/app/views/kpm/plugins/_plugins_table.html.erb
@@ -31,7 +31,7 @@
               </ul>
           <% end %>
         </td>
-        <td><%= link_to '<i class="fa fa-cloud-download"></i>'.html_safe, plugin_install_path(:plugin_name => name), :method => :post, :title => 'Install' %></td>
+        <td><%= link_to '<i class="fa fa-cloud-download"></i>'.html_safe, plugin_install_path(:plugin_key => name), :method => :post, :title => 'Install' %></td>
       </tr>
   <% end %>
   </tbody>
