--- a/app/views/kpm/plugins/_form.html.erb
+++ b/app/views/kpm/plugins/_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_tag plugin_install_from_fs_path, :multipart => true, :class => 'form-horizontal' do %>
     <div class="form-group">
-      <%= label_tag :name, 'Name', :class => 'col-sm-2 control-label' %>
+      <%= label_tag :key, 'Plugin key', :class => 'col-sm-2 control-label' %>
       <div class="col-sm-9">
-        <%= text_field_tag :name, '', :class => 'form-control', :placeholder => 'Plugin name' %>
+        <%= text_field_tag :key, '', :class => 'form-control', :placeholder => 'Plugin key' %>
       </div>
     </div>
     <div class="form-group">
-      <%= label_tag :name, 'Version', :class => 'col-sm-2 control-label' %>
+      <%= label_tag :version, 'Version', :class => 'col-sm-2 control-label' %>
       <div class="col-sm-9">
         <%= text_field_tag :version, '', :class => 'form-control', :placeholder => 'Plugin version' %>
       </div>
