--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,9 +11,9 @@
  * file per style scope.
  *
  *= require_self
- *= require bootstrap-datepicker3
  *= require dataTables/jquery.dataTables
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
+ *= require font-awesome
  *= require bootstrap_and_overrides
  *= require kpm/kpm
  */
