--- a/app/views/kpm/plugins/_plugins_table.html.erb
+++ b/app/views/kpm/plugins/_plugins_table.html.erb
@@ -4,7 +4,7 @@
     <tr>
       <th>Name</th>
       <th>Type</th>
-      <th>Versions</th>
+      <th>Version</th>
       <th>Required configuration</th>
       <th></th>
     </tr>
