nodes_info_controller: implement SSE for logs streaming
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/app/views/kpm/nodes_info/_logs_table.html.erb
+++ b/app/views/kpm/nodes_info/_logs_table.html.erb
@@ -8,35 +8,13 @@
   </tr>
   </thead>
   <tbody>
-  <% logs.each do |log| %>
-      <tr>
-        <td>
-          <% unless log['time'].blank? %>
-              <%= DateTime.strptime(log['time'].to_s, '%Q').strftime('%Y-%m-%d %H:%M:%S') %>
-          <% end %>
-        </td>
-        <td><%= log['name'] %></td>
-        <td>
-          <% if log['level'] == 'ERROR' %>
-              <span class="label label-danger"><%= log['level'] %></span>
-          <% elsif log['level'] == 'WARNING' %>
-              <span class="label label-warning"><%= log['level'] %></span>
-          <% else %>
-              <span class="label label-success"><%= log['level'] %></span>
-          <% end %>
-        </td>
-        <td><pre><%= log['message'] %></pre></td>
-      </tr>
-  <% end %>
   </tbody>
 </table>
 
 <%= javascript_tag do %>
   $(document).ready(function() {
     $('#logs-table').dataTable({
-      "dom": "<'row'r>t<'row'<'col-md-6'i><'col-md-6'p>>",
-      "pagingType": "full_numbers",
-      "pageLength": 50,
+      "dom": "<'row'r>t<'row'<'col-md-6'><'col-md-6'>>",
       "ordering": false
     });
   });
