--- a/app/views/kpm/nodes_info/index.html.erb
+++ b/app/views/kpm/nodes_info/index.html.erb
@@ -21,7 +21,7 @@
     <h1>Logs</h1>
 
     <div id="logs-table-wrapper">
-      <%= render :partial => 'kpm/nodes_info/logs_table', :locals => {:logs => @logs} %>
+      <%= render :partial => 'kpm/nodes_info/logs_table' %>
     </div>
 
   </div>
@@ -30,21 +30,9 @@
 
 <%= javascript_tag do %>
   $(document).ready(function() {
-    scheduleRefresh();
-  });
-
-  function scheduleRefresh() {
-    var timer = setTimeout(refreshAll, 1500);
-
-    // Stop refreshing when user clicks through logs
-    $('#logs-table_wrapper a').one('click', function() {
-      clearTimeout(timer);
-    });
+    refreshLogs('<%= nodes_info_refresh_path(:format => :js) %>');
 
     $('.plugin-link').one('ajax:beforeSend', function() {
-      // Disable the refresh
-      clearTimeout(timer);
-
       // Prevent other clicks
       $('.plugin-link').removeAttr('data-remote')
                        .removeAttr('data-method')
@@ -53,16 +41,5 @@
       // Spin
       $(this).children().addClass('fa-spin');
     });
-
-    $('.plugin-link').one('ajax:complete', function() {
-      // Delay a bit, to give time for the plugin state to change before the next refresh
-      setTimeout(refreshAll, 6000);
-    });
-  }
-
-  function refreshAll() {
-    $.ajax({
-      url: "<%= nodes_info_index_path(:format => :js) %>"
-    });
-  }
+  });
 <% end %>
