nodes_info: add host picker to stream logs from various sources
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/app/assets/stylesheets/kpm/nodes_info.css
+++ b/app/assets/stylesheets/kpm/nodes_info.css
@@ -17,3 +17,7 @@
     white-space: -o-pre-wrap; /* Opera 7 */
     word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
+
+#logs-form {
+    margin-bottom: 15px;
+}
