--- a/app/views/kpm/nodes_info/_logs_table.html.erb
+++ b/app/views/kpm/nodes_info/_logs_table.html.erb
@@ -10,6 +10,15 @@
   </tbody>
 </table>
 
+<%= form_tag url_for, :method => 'get', :format => :js, :id => 'kb_host-form', :class => 'form-horizontal', :style => 'display: none;' do %>
+  <div id="logs-form">
+    <div class="form-inline">
+      <%= text_field_tag :kb_host, kb_host, :class => 'form-control' %>
+      <%= button_tag '', :type => 'submit', :class => 'glyphicon glyphicon-search' %>
+    </div>
+  </div>
+<% end %>
+
 <%= javascript_tag do %>
   $(document).ready(function() {
     window.logsDataTable = $('#logs-table').DataTable({
@@ -22,5 +31,10 @@
       "ordering": true,
       "pageLength": 100
     });
+
+    var kbHostForm = $('#kb_host-form').detach();
+    var leftOfSearchBox = $("#logs-table_wrapper > div:nth-child(1) > div:nth-child(1)");
+    kbHostForm.appendTo(leftOfSearchBox);
+    kbHostForm.show();
   });
 <% end %>
