--- a/app/views/kpm/plugins/index.html.erb
+++ b/app/views/kpm/plugins/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="column-block">
 
-    <h1>Available plugins</h1>
+    <h1>Official plugins</h1>
 
     <%= render :partial => 'kpm/plugins/plugins_table', :locals => {:plugins => @plugins} %>
 
