--- a/app/views/kpm/plugins/_form.html.erb
+++ b/app/views/kpm/plugins/_form.html.erb
@@ -1,32 +1,32 @@
-<%= form_tag plugin_install_from_fs_path, :multipart => true, :class => 'form-horizontal' do %>
+<%= form_tag plugin_install_path, :class => 'form-horizontal' do %>
     <div class="form-group">
-      <%= label_tag :key, 'Plugin key', :class => 'col-sm-2 control-label' %>
+      <%= label_tag :plugin_key, 'Plugin key', :class => 'col-sm-2 control-label' %>
       <div class="col-sm-9">
-        <%= text_field_tag :key, '', :class => 'form-control', :placeholder => 'Plugin key' %>
+        <%= text_field_tag :plugin_key, '', :class => 'form-control', :placeholder => 'Plugin key', :required => true %>
       </div>
     </div>
     <div class="form-group">
-      <%= label_tag :version, 'Version', :class => 'col-sm-2 control-label' %>
+      <%= label_tag :plugin_version, 'Version', :class => 'col-sm-2 control-label' %>
       <div class="col-sm-9">
-        <%= text_field_tag :version, '', :class => 'form-control', :placeholder => 'Plugin version' %>
+        <%= text_field_tag :plugin_version, '', :class => 'form-control', :placeholder => 'Plugin version', :required => true %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= label_tag :plugin_uri, 'URI', :class => 'col-sm-2 control-label' %>
+      <div class="col-sm-9">
+        <%= text_field_tag :plugin_uri, '', :class => 'form-control', :placeholder => 'Plugin URI', :required => true %>
       </div>
     </div>
     <div class='form-group'>
       <div class="col-sm-offset-2 col-sm-10">
         <% %w(java ruby).each do |type| %>
             <div class="checkbox">
-              <%= label_tag :type do %>
-                  <%= radio_button_tag :type, type, (type == 'java') %>
+              <%= label_tag :plugin_type do %>
+                  <%= radio_button_tag :plugin_type, type, (type == 'java') %>
                   <%= type %>
               <% end %>
             </div>
         <% end %>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= label_tag :plugin, 'Plugin', :class => 'col-sm-2 control-label' %>
-      <div class="col-sm-10">
-        <%= file_field_tag 'plugin', :class => 'form-control' %>
       </div>
     </div>
     <div class="form-group">
