nodes_info: add animation during install process
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/app/views/kpm/nodes_info/index.html.erb
+++ b/app/views/kpm/nodes_info/index.html.erb
@@ -3,6 +3,7 @@
   <div class="column-block">
 
     <h1>Configured instances
+      <div id="install-in-progress" class="btn btn-xs text-success" style="display: none;"><i class="fa fa-refresh"></i>&nbsp;Operation in progress</div>
       <%= link_to('<i class="fa fa-refresh"></i>&nbsp;Operation complete, reload page'.html_safe, url_for, :id => "reload-page", :class => 'btn btn-xs text-success', :style => "display: none;") %>
       <% if kpm_plugin_installed?(@nodes_info) %>
         <div class="pull-right">
@@ -46,7 +47,22 @@
       setTimeout(fakeOperationComplete, 6000);
     });
 
+    <%- if @installing %>
+      // Prevent other clicks
+      $('.plugin-link').removeAttr('data-remote')
+                       .removeAttr('data-method')
+                       .removeAttr('href')
+      $('#nodes-table-wrapper').css({ opacity: 0.5 });
+
+      $('#install-in-progress').show();
+      $('#install-in-progress').children().addClass('fa-spin');
+
+      setTimeout(fakeOperationComplete, 6000);
+    <% end %>
+
     function fakeOperationComplete() {
+      $('#install-in-progress').hide();
+
       $('.plugin-link').children().removeClass('fa-spin');
       $('#nodes-table-wrapper').fadeTo("slow", 0.5);
       $('#reload-page').fadeIn("slow");
